--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dotenv": "^16.0.1",
     "jsdom": "^20.0.0",
     "node-fetch": "^3.2.10",
-    "node-schedule": "^2.1.0"
+    "node-schedule": "^2.1.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "eslint": "^8.21.0",
@@ -17,5 +18,5 @@
     "start": "node server.js"
   },
   "type": "module",
-  "packageManager": "yarn@3.2.2"
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
