--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "cowtown-twins",
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
     "dotenv": "^16.0.1",
     "jsdom": "^20.0.0",
+    "mailgun.js": "^12.0.1",
     "node-fetch": "^3.2.10",
     "node-schedule": "^2.1.0"
   },
